--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,1 +1,38 @@
-<p>login works!</p>
+<div class="col-md-12">
+    <div class="card card-container">
+        <img id="profile-img" class="profile-img-card" />
+        <form *ngIf="!isLoggedIn" name="form" (ngSubmit)="f.form.valid && onSubmit()" #f="ngForm" novalidate>
+            <div class="form-group">
+                <label for="username">Usuário</label>
+                <input type="text" class="form-control" name="username" [(ngModel)]="form.username" required #username="ngModel" [ngClass]="{ 'is-invalid': f.submitted && username.errors }" />
+                <div class="alert alert-danger" role="alert" *ngIf="username.errors && f.submitted" class="invalid-feedback">
+                    Usuário é obrigatório!
+                </div>
+            </div>
+            <div class="form-group">
+                <label for="password">Senha</label>
+                <input type="password" class="form-control" name="password" [(ngModel)]="form.password" required minlength="6" #password="ngModel" [ngClass]="{ 'is-invalid': f.submitted && password.errors }" />
+                <div class="alert alert-danger" role="alert" *ngIf="password.errors && f.submitted" class="invalid-feedback">
+                    <div *ngIf="password.errors['required']">Senha é obrigatória!</div>
+                    <div *ngIf="password.errors['minlength']">
+                        Senha deve ter pelo menos 6 caracteres.
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <button class="btn btn-primary btn-block">
+            Login
+          </button>
+            </div>
+            <div class="form-group">
+                <div class="alert alert-danger" role="alert" *ngIf="f.submitted && isLoginFailed">
+                    Erro no Login: {{ errorMessage }}
+                </div>
+            </div>
+        </form>
+
+        <div class="alert alert-success" *ngIf="isLoggedIn">
+            Logado como: {{ roles }}.
+        </div>
+    </div>
+</div>
